Closed Bug 1163343 Opened 10 years ago Closed 10 years ago

Incorrectly formatted error message "sending failed"

Categories

(Thunderbird :: General, defect)

38 Branch
defect
Not set
normal

Tracking

(thunderbird38+ fixed, thunderbird39 fixed, thunderbird40 fixed, thunderbird41 fixed)

RESOLVED FIXED
Thunderbird 41.0
Tracking Status
thunderbird38 + fixed
thunderbird39 --- fixed
thunderbird40 --- fixed
thunderbird41 --- fixed

People

(Reporter: jorgk-bmo, Assigned: rkent)

References

Details

(Keywords: regression)

Attachments

(1 file)

When pressing "Cancel" while e-mail is being sent: Sending of the message failed. The message could not be sent using Outgoing server (SMTP) %S for an unknown reason. Please verify that your Outgoing server (SMTP) settings are correct and try again. %S, hmm, which user would understand this?
Not dramatic, but also not nice and clearly a regression.
Previously, a cancel used the generic message "Sending of the message failed" along with a worthless suggestion to check your settings. After the big send string reference rewrite, the NS_ERROR_ABORT that comes from the cancel operation was not added to nsComposeStrings.cpp, which means that it falls through to the default message "smtpSendFailedUnknownReason" which includes the %S string. But the use of that string occurs in DoDeliveryExitProcessing() where again NS_ERROR_ABORT is not handled, and it falls through to the default (which DOES NOT assume that a %S exists in the string). Really it is a design flaw to fall through in one case to a default that uses %S and in another to one that does not use %S. I am torn about whether to fix that default, or whether to just fix the specific case discovered in this bug. I checked all of the cases that are specifically called out in DoDeliveryExitProcessing and they all have entries defined in nsComposeStrings.cpp So that means to me that the default string should not require the %S in nsMsgComposeStrings.cpp
Attachment #8603776 - Flags: review?(neil)
Assignee: nobody → rkent
Status: NEW → ASSIGNED
Sorry for reporting a duplicate, but I got more attention than the other guy ;-)
Attachment #8603776 - Flags: review?(neil) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 41.0
Attachment #8603776 - Flags: approval-comm-beta?
Attachment #8603776 - Flags: approval-comm-aurora?
Attachment #8603776 - Flags: approval-comm-aurora? → approval-comm-aurora+
Attachment #8603776 - Flags: approval-comm-beta? → approval-comm-beta+
Blocks: TB38found
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: