Bug 1163343 - Incorrectly formatted error message 'sending failed', r=neil